testsuite/tests/properties/invalid_then/lambda_no_arg/test.lkt
from common import FooNode, Name

class Example: FooNode {
    @parse_field name: Name

    fun prop(): Name = node.name.do(() => node)
}
